--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ feat_common_core = [
   "mountpoint",
   "lscpu",
   "ctrlaltdel",
+  "last"
 ]
 
 [workspace.dependencies]
@@ -53,11 +54,11 @@ uucore = { workspace = true }
 phf = { workspace = true }
 textwrap = { workspace = true }
 
-
 #
 lscpu = { optional = true, version = "0.0.1", package = "uu_lscpu", path = "src/uu/lscpu" }
 mountpoint = { optional = true, version = "0.0.1", package = "uu_mountpoint", path = "src/uu/mountpoint" }
 ctrlaltdel = { optional = true, version = "0.0.1", package = "uu_ctrlaltdel", path = "src/uu/ctrlaltdel" }
+last = { optional = true, version = "0.0.1", package = "uu_last", path = "src/uu/last" }
 
 [dev-dependencies]
 pretty_assertions = "1"
